--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   yaml: ^3.1.1
   glob: ^2.1.1
   path: ^1.8.2
-  file: ^7.0.0
+  file: ">=6.0.0 <8.0.0"
   stack_trace: ^1.10.0
   watcher: ^1.0.2
   rxdart: ^0.27.7
