--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,19 +11,19 @@ environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
-  analyzer: ^5.13.0
-  analyzer_plugin: ">=0.10.0 <1.0.0"
-  args: ^2.3.1
-  dart_style: ^2.2.4
-  meta: ^1.8.0
-  yaml: ^3.1.1
-  glob: ^2.1.1
-  path: ^1.8.2
+  analyzer: ^6.0.0
+  analyzer_plugin: ^0.11.3
+  args: ^2.4.2
+  dart_style: ^2.3.3
+  meta: ^1.10.0
+  yaml: ^3.1.2
+  glob: ^2.1.2
+  path: ^1.8.3
   file: ">=6.0.0 <8.0.0"
-  stack_trace: ^1.10.0
+  stack_trace: ^1.11.1
   watcher: ^1.1.0
   rxdart: ^0.27.7
 
 dev_dependencies:
-  lints: ^2.0.1
-  test: ^1.22.1
+  lints: ^2.1.1
+  test: ^1.24.7
