--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "dart.lineLength": 100,
-  "dart.flutterSdkPath": ".fvm/flutter_sdk"
+  "dart.flutterSdkPath": ".fvm/flutter_sdk",
+  "dart.testAdditionalArgs": ["--compiler", "vm:source"]
 }
